# magmapy

./: .gitignore  CHANGELOG.md  README.md  build-requirements.txt  mypy-requirements.txt  pyproject.toml  requirements.txt  test-requirements.txt
doc/source/: conf.py  index.rst
doc/source/dev/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
src/magma/: __about__.py  __main__.py
src/magma/agent/communication/: action.py  channel.py  channel_manager.py  msg_encoder.py  msg_parser.py  perception.py  tcp_lpm_channel.py
src/magma/agent/decision/: behavior.py  behaviors.py  decision_maker.py
src/magma/agent/model/: agent_model.py  base.py  belief.py
src/magma/agent/model/robot/: actuators.py  robot_description.py  robot_model.py  robot_tree.py  sensors.py
src/magma/agent/model/world/: objects.py
src/magma/agent/runtime/: agent_runtime.py  factory.py
src/magma/common/communication/: sexpression.py
src/magma/common/math/geometry/: angle.py  bounding_box.py  circle.py  interval.py  line.py  pose.py  rotation.py  vector.py
src/magma/rchl/communication/: rchl_action.py  rchl_mitecom.py  rchl_perception.py
src/magma/rchl/model/: rchl_agent.py  rchl_game_state.py  rchl_rules.py
src/magma/rchl/model/robot/: rchl_actuators.py  rchl_robot_description.py  rchl_robot_model.py  rchl_sensors.py
src/magma/rchl/model/world/: rchl_field_description.py
src/magma/rchl/runtime/: rchl_factory.py
src/magma/rcss/communication/: rcss_action.py  rcss_channel.py  rcss_msg_encoder.py  rcss_msg_parser.py  rcss_perception.py  rcsssmj_msg_encoder.py  rcsssmj_msg_parser.py  spark_msg_encoder.py  spark_msg_parser.py
src/magma/rcss/decision/: rcss_base_behaviors.py  rcss_decision_maker.py
src/magma/rcss/model/: rcss_agent.py  rcss_rules.py  rcsssmj_agent.py  spark_agent.py
src/magma/rcss/model/robot/: rcss_actuators.py  rcss_robot_description.py  rcss_robot_model.py  rcss_robots.py  rcss_sensors.py  rcsssmj_robot_description.py  spark_robot_description.py
src/magma/rcss/model/world/: rcss_field_description.py  rcss_game_state.py  rcss_soccer_world.py  rcsssmj_field_description.py  rcsssmj_soccer_world.py  spark_field_description.py
src/magma/rcss/runtime/: rcss_factory.py  rcsssmj_factory.py  spark_factory.py
src/magma/soccer_agent/communication/: soccer_perception.py
src/magma/soccer_agent/decision/: soccer_behaviors.py  soccer_decision_maker.py
src/magma/soccer_agent/decision/behaviors/: attack.py  head.py  kick.py  movement.py  positioning.py
src/magma/soccer_agent/model/: game_state.py  soccer_agent.py  soccer_beliefs.py  soccer_rules.py
src/magma/soccer_agent/model/strategy/: role.py  role_assignment.py  role_manager.py  roles.py  strategies.py  strategy.py
src/magma/soccer_agent/model/world/: ifo.py  soccer_field_description.py  soccer_map.py  soccer_objects.py  soccer_world.py
src/magma/soccer_agent/runtime/: soccer_factory.py
src/magmapy/: __main__.py
src/magmapy/agent/communication/: action.py  channel.py  channel_manager.py  msg_encoder.py  msg_parser.py  perception.py  tcp_lpm_channel.py
src/magmapy/agent/decision/: behavior.py  behaviors.py  decision_maker.py
src/magmapy/agent/model/: agent_model.py
src/magmapy/agent/model/robot/: actuators.py  robot_description.py  robot_model.py  robot_tree.py  sensors.py
src/magmapy/agent/model/world/: objects.py
src/magmapy/agent/runtime/: agent_runtime.py  factory.py
src/magmapy/common/communication/: parser.py  sexpression.py
src/magmapy/common/math/geometry/: angle.py  bounding_box.py  circle.py  interval.py  line.py  pose.py  rotation.py
src/magmapy/rchl/communication/: rchl_action.py  rchl_mitecom.py  rchl_perception.py
src/magmapy/rchl/model/: rchl_agent.py  rchl_game_state.py  rchl_rules.py
src/magmapy/rchl/model/robot/: rchl_actuators.py  rchl_robot_description.py  rchl_robot_model.py  rchl_sensors.py
src/magmapy/rchl/runtime/: rchl_factory.py
src/magmapy/rcss/communication/: rcss_action.py  rcss_msg_encoder.py  rcss_msg_parser.py  rcss_perception.py
src/magmapy/rcss/decision/: rcss_base_behaviors.py
src/magmapy/rcss/model/: rcss_agent.py  rcss_rules.py
src/magmapy/rcss/runtime/: rcss_factory.py
src/magmapy/soccer_agent/decision/: soccer_behaviors.py  soccer_decision_maker.py
src/magmapy/soccer_agent/model/: game_state.py  soccer_agent.py  soccer_beliefs.py  soccer_rules.py
src/magmapy/soccer_agent/runtime/: soccer_factory.py
(+29 files in other folders)
