[build-system]
requires = [
  # NOTE: this needs to be kept in sync with build-requirements.txt and mypy-requirements.txt
  # build-requirements.txt
  "hatchling",
  # mypy-requirements.txt
  "numpy >= 2.0.0"
]
build-backend = "hatchling.build"

[project]
name = "magma"
description = "Agent Framework"
keywords = ["Agent System", "AI", "RoboCup", "HSO"]
readme = "README.md"
authors = [{name = "Stefan Glaser", email = "stefan.glaser@hs-offenburg.de"}]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Typing :: Typed",
]
requires-python = ">= 3.9"
dependencies = [
  # When changing this, also update build-system.requires and mypy-requirements.txt
  "numpy >= 2.0.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://magma.hs-offenburg.de"
Documentation = "https://git.hs-offenburg.de/sglaser/magmapy"
Repository = "https://git.hs-offenburg.de/sglaser/magmapy/-/blob/main/doc"
Changelog = "https://git.hs-offenburg.de/sglaser/magmapy/-/blob/main/CHANGELOG.md"
Issues = "https://git.hs-offenburg.de/sglaser/magmapy/-/issues"

[project.scripts]
magma = "magma.__main__:magma_agent"

[tool.ruff]
line-length = 240

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/magma tests}"

[tool.hatch.version]
path = "src/magma/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/magma"]