[build-system]
requires = [
  # NOTE: this needs to be kept in sync with build-requirements.txt
  # build-requirements.txt
  "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "magmapy"
description = "Agent Framework"
keywords = ["Agent System", "AI", "RoboCup", "HSO"]
readme = "README.md"
authors = [{name = "Stefan Glaser", email = "stefan.glaser@hs-offenburg.de"}]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = [
  # When changing this, also update requirements.txt
  "numpy >= 1.0.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://magma.hs-offenburg.de"
Repository = "https://github.com/magmaOffenburg/magmapy"
Documentation = "https://github.com/magmaOffenburg/magmapy/tree/main/src/magma"
Changelog = "https://github.com/magmaOffenburg/magmapy/blob/main/CHANGELOG.md"
Issues = "https://github.com/magmaOffenburg/magmapy/issues"

[project.scripts]
magma = "magmapy.__main__:magma_agent"

[tool.ruff]
line-length = 240
exclude = ["doc"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
extend-ignore = [
  "ARG002",  # unused-method-argument
  "PLR2004", # magic-value-comparison
  "S311"     # suspicious-non-cryptographic-random-usage
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/magmapy tests}"

[tool.hatch.envs.doc]
extra-dependencies = [
  "sphinx",
  "pydata-sphinx-theme"
]

[tool.hatch.envs.doc.scripts]
html = "sphinx-build -M html doc/source doc/build"
clean = "sphinx-build -M clean doc/source doc/build"

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest"
]

[tool.hatch.version]
path = "src/magmapy/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/magmapy"]
